fixed horizontal scroll. vw/%

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@
 
 body {
     /* Body-specific overrides */
-    background-color: rgba(26, 35, 126, 1.0);
+    background-color: white;
     width: 100%; /* Makes body fill the full width of the viewport */
     height: auto; /* Lets the height adjust based on content */
 }
@@ -32,6 +32,7 @@ html {
 /*////////////////////////////////////////////////////// */
 
 .navbar {
+    display: flex; /* Flexbox for aligning items inside the navbar */
     position: fixed; /* Fixes navbar to the top of the screen */
     top: 0; /* Aligns the navbar to the top */
     left: 0; /* Aligns the navbar to the left */
@@ -39,15 +40,15 @@ html {
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(152, 251, 152, 0.5)); /* Gradient effect */
     backdrop-filter: blur(5px); /* Adds a blur effect to background */
-    display: flex; /* Flexbox for aligning items inside the navbar */
     padding: 10px; /* Padding inside the navbar */
     z-index: 1000; /* Ensures the navbar is above other elements */
-    width: 100vw; /* Full viewport width */
+    width: 100%; /* Full viewport width */
     justify-content: space-between;
     align-items: center; /* Vertically centers the navbar items */
     min-height: 100px;
-    max-height: 100px;
     border-bottom: 1px solid white;
+    flex-grow: 0;
+    flex-shrink: 0;
 }
 
 .name-head {
@@ -82,7 +83,7 @@ html {
 }
 
 .list-link {
-    padding: 4%;
+    padding: 1%;
 }
 
 .navbar-links a {
@@ -122,8 +123,7 @@ html {
         top: 0; /* Aligns the navbar to the top */
         left: 0; /* Aligns the navbar to the left */
         right: 0; /* Aligns the navbar to the right */
-        z-index: 1002; /* Higher value to keep it above other elements */
-        max-height: 500px;
+        z-index: 1000; /* Higher value to keep it above other elements */
     }
 
     .navbar-links {
@@ -149,6 +149,10 @@ html {
     .navbar {
         justify-content: center;
     }
+
+    .navbar-links li {
+        padding: 20px;
+    }
 }
 
 
@@ -168,10 +172,11 @@ html {
     margin: 0px; /* Removes default margin */
     width: 100%; /* Full width */
     flex-wrap: wrap; /* Wraps items onto a new line if necessary */
-    top: 100px; /* Pushes section down below navbar */
-    padding-top: 100px; /* Adds space at the top of the section */
+    top: 0px; /* Pushes section down below navbar */
     gap: 0.5rem;
     padding: 20px;
+    padding-top: 150px; /* Adds space at the top of the section */
+    padding-bottom: 150px;
 }
 
 /*////////////////////////*/
@@ -185,7 +190,7 @@ html {
     aspect-ratio: 16 / 9; /* Maintains a 16:9 aspect ratio */
     background-color: rgba(50, 50, 50, 1.0);
     overflow: hidden; /* In case you have content overflow */
-    margin: 0 auto; /* Centers the box */
+    /* margin: 0 auto; /* Centers the box */
     border: 2px solid white;
     border-radius: 15px;
 }
@@ -229,7 +234,7 @@ p.profile-paragraph {
     aspect-ratio: 16 / 9; /* Maintains a 16:9 aspect ratio */
     background-color: gray; /* Example background color */
     overflow: hidden; /* In case you have content overflow */
-    margin: 0 auto; /* Centers the box */
+    /* margin: 0 auto; /* Centers the box */
     border: 2px solid white;
     border-radius: 15px;
 }
@@ -278,7 +283,7 @@ p.profile-paragraph {
     aspect-ratio: 16 / 9; /* Maintains a 16:9 aspect ratio */
     background-color: gray; /* Example background color */
     overflow: hidden; /* In case you have content overflow */
-    margin: 0 auto; /* Centers the box */
+    /*margin: 0 auto; /* Centers the box */
     border: 2px solid white;
     border-radius: 15px;
 }
@@ -315,7 +320,7 @@ p.profile-paragraph {
     aspect-ratio: 16 / 9; /* Maintains a 16:9 aspect ratio */
     background-color: rgba(50, 50, 50, 1.0);
     overflow: hidden; /* In case you have content overflow */
-    margin: 0 auto; /* Centers the box */
+    /*margin: 0 auto; /* Centers the box */
     border: 2px solid white;
     border-radius: 15px;
 }
@@ -352,13 +357,13 @@ p.services-paragraph {
     width: 100%; /* Full width */
     height: auto; /* Adjust height based on content */
     padding: 20px; /* Padding inside the section */
-    margin-top: 20px; /* Adds space at the top */
     border-top: 1px solid white;
 }
 
 .contact-text, p {
     font-size: 20px; /* Font size */
     font-family: sans-serif; /* Font style */
+    color: white;
     padding: 5px; /* Padding inside the text block */
     text-align: center; /* Centers text horizontally */
     margin-top: 20px; /* Adds space at the top */
@@ -397,6 +402,7 @@ p.services-paragraph {
     object-fit: contain;
 }
 
+
 .modal-close {
     position: absolute;
     top: 20px;
@@ -414,7 +420,7 @@ p.services-paragraph {
     background-color: rgba(50, 50, 50, 1.0); /* White background */
     padding: 10px; /* Padding inside the section */
     margin-top: 100px; /* Space above the section */
-    margin-bottom: 100px; /* Space below the section */
+    margin-bottom: 0px; /* Space below the section */
     border: 2px solid white; /* Top border */
     border-radius: 15px;
     display: flex; /* Use flexbox for layout */
@@ -479,7 +485,7 @@ p.services-paragraph {
 .email-text {
     font-family: sans-serif;
     font-size: 20px;
-    color: yellow;
+    color: hotpink;
 }
 
 
@@ -521,4 +527,5 @@ p.services-paragraph {
 }
 
 /*/////////////////////////////////////*/
+
 
